--- a/PizzaDaMamma.Orders/wwwroot/css/site.css
+++ b/PizzaDaMamma.Orders/wwwroot/css/site.css
@@ -17,7 +17,7 @@
 }
 
 .card-header {
-    font-size: 2rem;
+    font-size: 1.4rem;
     margin: 0 0 1rem 0;
     text-align: center;
     height: 5rem;
@@ -28,7 +28,7 @@
     display: block;
 }
 
-    .card-image > img {
+    .card-image > img, #pdm-pizza-select-image {
         border-radius: 50%;
         border: 1px solid rgba(255,255,255,.3);
     }
@@ -84,3 +84,53 @@ table.striped > tbody > tr:nth-child(odd) {
         background: rgba(255,255,255,.3);
     }
 
+
+.pdm-modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #000;
+    padding-top: 50px;
+}
+
+.pdm-modal-cotent {
+    padding: 1rem;
+}
+
+.pdm-modal-close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #f1f1f1;
+}
+
+    .pdm-modal-close:hover,
+    .pdm-modal-close:focus {
+        color: #f44336;
+        cursor: pointer;
+    }
+
+
+#pdm-pizza-select-ingridients, #pdm-pizza-select-ingridients-add {
+    padding-right: 1rem;
+}
+
+.pdm-pizza-select-ingridient {
+    font-size: 1.3rem;
+    border-radius: 1rem;
+    border: 1px solid rgba(255,255,255,.3);
+    margin: 0.5rem 0 0.5rem 1rem;
+    padding: 0.3rem 0.5rem;
+    display: inline-block;
+}
+
+.pdm-pizza-select-ingridient-selected {
+    background: rgba(255,255,255,.2);
+}
